--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -28,7 +28,8 @@
 
     <ImageView
         android:id="@+id/pic"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:autofillHints="识别图片" />
+        android:autofillHints="识别图片"
+        android:background="@color/colorAccent" />
 </LinearLayout>
