--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -38,4 +38,25 @@
         android:layout_height="wrap_content"
         android:autofillHints="识别图片"
         android:layout_gravity="center" />
+
+    <ImageView
+        android:id="@+id/pic1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autofillHints="识别图片"
+        android:layout_gravity="center" />
+
+    <ImageView
+        android:id="@+id/pic2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autofillHints="识别图片"
+        android:layout_gravity="center" />
+
+    <ImageView
+        android:id="@+id/pic3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autofillHints="识别图片"
+        android:layout_gravity="center" />
 </LinearLayout>
